# distributed-system

./: .gitignore  CMakeLists.txt  README.md  follow.md  vercel.json
.agents/: AGENTS.md
api/: proxy.js
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/api/: proxy.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ControlCenter.jsx  HashRing.jsx  Terminal.jsx  configTab.jsx
frontend/src/services/: api.js
frontend/src/store/: useStore.js
include/cluster/: Gossip.hpp  Replicator.hpp
include/core/: Config.hpp  ConsistentHash.hpp  StorageEngine.hpp  WAL.hpp
include/network/: Router.hpp
scripts/: post_data.txt  start_server.sh  stop_server.sh  stress_test.sh  tejas-db.service
src/: main.cpp
src/cluster/: Gossip.cpp  Replicator.cpp
src/core/: ConsistentHash.cpp  StorageEngine.cpp  WAL.cpp
src/network/: Router.cpp
